refactor: remove DTO usage from service layer, update controllers to handle entity-to-DTO conversion